--- a/index.html
+++ b/index.html
@@ -73,6 +73,24 @@
 								</article>
 								<article>
 									<span class="image">
+										<img src="images/classpulse.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="classpulse.html" class="link">Class Pulse</a></h3>
+										<p>Flutter App</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/lapboost.jpeg" alt=""/>
+									</span>
+									<header class="major">
+										<h3><a href="lapboost.html" class="link">Lapboost App</a></h3>
+										<p>Flutter App</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
 										<img src="images/portfolio.png" alt="" />
 									</span>
 									<header class="major">
