Updates, spelling mistake fixes, and like

--- a/facialrecognition.html
+++ b/facialrecognition.html
@@ -44,7 +44,7 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1 style="text-align: center;">Facial Recognizer for Healthcare</h1>
+								<h1 style="text-align: center;">Facial Recognizer for Healthcare <br> <a>🏆Award Winner🏆</a></h1>
 							</header>
 							<div class="content">
 								<p style="text-align: center;">An award winning project that accurately detects the face of hospital staff and patients</p>
@@ -125,7 +125,7 @@
 												is used and the algorithm is applied to detect the face of the person staring at the camera. The system
 												was rigorously tested, tallying up the true positives, false positives, true negatives, and false negatives;
 												the results of the testing led to an impressive over 90% accuracy! This project is really dear to my heart as
-												it is the first times one of my projects won an award. Standing up on the stage and recieving the award was an 
+												it is the first times one of my projects won an award. Standing up on the stage and receiving the award was an
 												experience I will never forget, which made it one of the dearest projects in my portfolio.
 											</p>
 										</div>
