--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 
 				<!-- Main -->
 					<div id="main">
-
 						<!-- One -->
 							<section id="one" class="tiles">
 								<article>
@@ -85,7 +84,7 @@
 										<img src="images/lapboost.jpeg" alt=""/>
 									</span>
 									<header class="major">
-										<h3><a href="lapboost.html" class="link">Lapboost App</a></h3>
+										<h3><a href="lapboost.html" class="link">Lapboost App</a><br> <a>🏆Award Winner🏆</a></h3>
 										<p>Flutter App</p>
 									</header>
 								</article>
@@ -112,7 +111,7 @@
 										<img src="images/facerecognition.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="facialrecognition.html" class="link">Facial Recognizer for Healthcare</a></h3>
+										<h3><a href="facialrecognition.html" class="link">Facial Recognizer for Healthcare</a> <br> <a>🏆Award Winner🏆</a></h3>
 										<p>Python and Jupyter Notebook</p>
 									</header>
 								</article>
