--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<title>Youssef Mansy's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property="og:title" content="Youssef Mansy's Portfolio">
+		<meta property="og:description" content="Check out my projects and experience!">
+		<meta property="og:image" content="https://ymansy1.github.io/Portfolio/images/myimage.jpg">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
